Remove collections install from task set

--- a/dell_pxe.yml
+++ b/dell_pxe.yml
@@ -4,8 +4,8 @@
   name: Configure Boot Mode Setting
   gather_facts: False
 
-  collections:
-    - dellemc.openmanage
+#  collections:
+#    - dellemc.openmanage
 
   tasks:
 
